2008-09-30  Michael Natterer  <mitch@imendio.com>

	Bug 553582 – Add orientation API to GtkSeparator

	* gtk/gtkseparator.[ch]: implement the GtkOrientable interface and
	swallow all code from GtkHSeparator and GtkVSeparator. Add
	gtk_separator_new() which takes a GtkOrientation argument.

	* gtk/gtkhseparator.c
	* gtk/gtkvseparator.c: remove all code except the constructor and
	call gtk_orientable_set_orientation() in init().

	* gtk/gtk.symbols: add gtk_separator_new().

2008-09-30  Marek Kasik  <mkasik@redhat.com>

	Bug 344522 – support non-local destination files (GtkPrint):

	* gtk/gtkprintunixdialog.c
	* gtk/gtkprinteroptionwidget.c: Process URI instead of filename.
	* modules/printbackends/file/gtkprintbackendfile.c: Add ability
	to save files on non-local filesystems.

2008-09-30  Michael Natterer  <mitch@imendio.com>

	* gtk/gtk.symbols: forgot the G_GNUC_CONST of
	gtk_orientable_get_type().

2008-09-30  Michael Natterer  <mitch@imendio.com>

	Bug 541009 – Get rid of separate subclasses for horizontal and
	vertical orientation:

	* gtk/Makefile.am
	* gtk/gtk.symbols
	* gtk/gtk.h
	* gtk/gtkorientable.[ch]: add new interface GtkOrientable which
	will be implemented by everything that can switch orientation.

2008-09-30  Christian Dywan  <christian@imendio.com>

	Fix a typo in the tutorial.

	* docs/tutorial/gtk-tut.sgml: It's mnemonic, not 'mnemnonic'.

2008-09-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 553086 – hard to see current immodule

	* gtk/gtkimmulticontext.c (gtk_im_multicontext_append_menuitems):
	Display the actually selected context in the system menuitem.
	Complaint by Akira Tagoh.

2008-09-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 530568 – Entries with visibility=FALSE should warn for caps-lock
	on

	* gtk/gtkentry.c: Add a tooltip-like Caps Lock warning for
	password entries. The warning is also triggered if an input method
	is active. The warning can be turned off using the
	GtkEntry::caps-lock-warning property. 